--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -30,7 +30,6 @@ on:
 
 jobs:
   build:
-    name:    Build. Create React App
     runs-on: ${{ matrix.os }}
     
     strategy:
@@ -46,11 +45,12 @@ jobs:
         architecture:
           - x64
     
+    name: Node ${{ matrix.node_version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
       
-      - name: Node ${{ matrix.node_version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
+      - name: Setup Node
         uses: actions/setup-node@v2
         with:
           node-version:    ${{ matrix.node_version }}
@@ -58,8 +58,8 @@ jobs:
         
       - name: Output
         run: |
-          echo "============================="
+          echo "========================="
           node --version && npm --version
           #echo "Updating npm..."
           #npm install -g npm && npm --version
-          echo "============================="
+          echo "========================="
