Cache npm dependencies as manager
https://github.com/actions/setup-node#caching-packages-dependencies

https://github.com/actions/setup-node/blob/main/docs/advanced-usage.md#check-latest-version

--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -60,6 +60,8 @@ jobs:
         with:
           node-version:    ${{ matrix.node_version }}
           architecture:    ${{ matrix.architecture }}
+#          check-latest:    true
+          cache:           'npm'
         
       - name: Output node - npm
         run: node --version && npm --version
