--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -50,7 +50,7 @@ jobs:
             node_version: 12
             architecture: x86
     
-    name: Node ${{ matrix.node_version }} - ${{ matrix.architecture }} on ${{ matrix.os }}
+    name: Node ${{ matrix.node_version }} ${{ matrix.architecture }} on ${{ matrix.os }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
@@ -61,10 +61,41 @@ jobs:
           node-version:    ${{ matrix.node_version }}
           architecture:    ${{ matrix.architecture }}
 #          check-latest:    true
+           # zero-config caching available using setup-node@v2
 #          cache:           'npm'
         
-      - name: Output node - npm
-        run: node --version && npm --version
-      
+      - name: Print node version
+        run: node --version
+      - name: Print npm version
+        run: npm --version
       - name: Upgrade npm
-        run: npm install -g npm && npm --version
+        run:  npm install -g npm
+      - name: Print node version
+        run: node --version
+      - name: Print npm version
+        run: npm --version
+      
+      # Always after setup node/npm or use `actions/setup-node.with.cache: 'npm'`
+      # verbose caching if using `actions/setup-node@v1`
+      - name: Determine npm cache directory
+        id:   npm-cache-dir
+        run:  |
+          echo "::set-output name=dir::$(npm config get cache)"
+      - name: Handle npm cache
+      - uses: actions/cache@v2
+        # use this to check for `cache-hit` ==> if: steps.npm-cache.outputs.cache-hit != 'true'
+        id:   npm-cache
+        with:
+          path: |
+            **/node_modules
+            ${{ steps.npm-cache-dir.outputs.dir }}
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+      
+      - run: |
+          echo ${NPM_CACHE_DIR}
+          echo ${NPM_CACHE_HIT}
+        env:
+          NPM_CACHE_DIR: ${{ steps.npm-cache-dir.outputs.dir }}
+          NPM_CACHE_HIT: ${{ steps.npm-cache.outputs.cache-hit }}
