--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -83,10 +83,10 @@ jobs:
           echo "::set-output name=dir::$(npm config get cache)"
       
       - name: Print npm cache status
-        if: ${{ startsWith(runner.os, 'Windows') }}
         env:
           NPM_CACHE_DIR: ${{ steps.npm-cache-dir.outputs.dir }}
           RUNNER_OSPLAT: ${{ runner.os }}
+        if: ${{ !startsWith(runner.os, 'Windows') }}
         run: |
           echo $RUNNER_OSPLAT
           echo $NPM_CACHE_DIR
