Add create-app + build

--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -108,8 +108,8 @@ jobs:
       - name: Init React app project
         run: npx create-react-app my-created-react-app --use-npm
 
-        run: cd my-create-react-app
-        run: ls -lAhRs --color
+      - run: cd my-create-react-app
+      - run: ls -lAhRs --color
 
       - name: Build React app project
         run: npm run build
