Add create-app + build

--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -114,4 +114,4 @@ jobs:
       - name: Build React app project
         run: npm run build
 
-        run: ls -lAhRs --color
+      - run: ls -lAhRs --color
