--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -29,6 +29,15 @@ on:
 
 
 jobs:
+  
+  avoid_reduncy:
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Cancel Previous Redundant Builds
+        uses: styfle/cancel-workflow-action@0.9.1
+        with:
+          access_token: ${{ github.token }}
+
   build:
     runs-on: ${{ matrix.os }}
     
@@ -108,12 +117,12 @@ jobs:
       - name: Init React app project
         run: npx create-react-app my-created-react-app --use-npm
 
-      - run: ls -lAhRs --color
+      - run: ls -lA
         working-directory: ./my-create-react-app
 
       - name: Build React app project
         run: npm ci
         working-directory: ./my-create-react-app
 
-      - run: ls -lAhRs --color
+      - run: ls -lA
         working-directory: ./my-create-react-app
