--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -117,10 +117,11 @@ jobs:
 
       - run: |
           cd
-          git status
+          cd ./
+#          git status
 
-      - name: Init React app project
-        run: npx create-react-app my-created-react-app --use-npm
+#      - name: Init React app project
+#        run: npx create-react-app my-created-react-app --use-npm
 
       - name: Git status
         run: |
