--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -128,6 +128,7 @@ jobs:
         run: |
           echo "$(cd)"
           git status
+          echo "$(cd)"
           ls
 
       - name: Init React app project
@@ -137,6 +138,8 @@ jobs:
         run: |
           echo "$(cd)"
           git status
+          echo "$(cd)"
+          ls
         shell: bash
  
 #      - name: Build React app project
