--- a/.github/workflows/print-events-repo-name.yml
+++ b/.github/workflows/print-events-repo-name.yml
@@ -41,22 +41,30 @@ jobs:
         run: ls -lAoghi1
 
   print:
-    name: Print ghern
+    name: Print GH event + repo name
     runs-on: ubuntu-latest
     steps:
-      - name: Echo. JSON event data
+      - name: Echo. JSON event data (as env)
         # NOTE: `github.event` does not seem to be populated when an action is run `on.schedule`
         env:
           GH_JSONEVENT: ${{ toJSON( github.event ) }}
         run: echo -ne "$GH_JSONEVENT"
-      - run: echo -ne "${{ toJSON( github.event ) }}"
+      - name: Echo. JSON event data (as var)
+        run: echo -ne "${{ toJSON( github.event ) }}"
 
       - name: Echo. Github Event Data
         run: |
           echo -ne "${{ github.repository }}"
+          echo "....."
+          echo "....."
           echo -ne "$${{ github.event }}"
         
       - name: Extract GH_REPOSITORY_NAME (via GITHUB_* + set-env)
+        # DEPRECATED!!!
+        # Error: The `set-env` command is disabled. Please upgrade to using Environment Files or opt into unsecure command execution by setting the `ACTIONS_ALLOW_UNSECURE_COMMANDS` environment variable to `true`.
+        # For more information see: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
+        env:
+          ACTIONS_ALLOW_UNSECURE_COMMANDS='true'
         run: echo ::set-env name=GH_REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//")
       - name: Echo. GH_REPOSITORY_NAME (from set-env)
         run: |
