--- a/.github/workflows/print-events-repo-name.yml
+++ b/.github/workflows/print-events-repo-name.yml
@@ -64,7 +64,7 @@ jobs:
         # Error: The `set-env` command is disabled. Please upgrade to using Environment Files or opt into unsecure command execution by setting the `ACTIONS_ALLOW_UNSECURE_COMMANDS` environment variable to `true`.
         # For more information see: https://github.blog/changelog/2020-10-01-github-actions-deprecating-set-env-and-add-path-commands/
         env:
-          ACTIONS_ALLOW_UNSECURE_COMMANDS='true'
+          ACTIONS_ALLOW_UNSECURE_COMMANDS: ${{ true }}
         run: echo ::set-env name=GH_REPOSITORY_NAME::$(echo "$GITHUB_REPOSITORY" | awk -F / '{print $2}' | sed -e "s/:refs//")
       - name: Echo. GH_REPOSITORY_NAME (from set-env)
         run: |
