fix: error The template is not valid
https://github.com/davorpa/testing-github-actions/runs/3436916805?check_suite_focus=true#step:2:2

Error: The template is not valid. .github/workflows/print-events-repo-name.yml (Line: 51, Col: 32): A mapping was not expected

--- a/.github/workflows/print-events-repo-name.yml
+++ b/.github/workflows/print-events-repo-name.yml
@@ -51,20 +51,20 @@ jobs:
           GH_EVENT_REPOSITORY: ${{ github.event.repository }}
           GH_JSON_EVENT: ${{ toJSON( github.event ) }}
         run: |
-          echo -e "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
-          echo ".."
-          echo -e "GH_REPOSITORY: $GH_REPOSITORY"
-          echo ".."
-          echo -e "GH_EVENT_REPOSITORY: $GH_EVENT_REPOSITORY"
-          echo ".."
+          echo -e "GITHUB_REPOSITORY> $GITHUB_REPOSITORY"
+          echo "..."
+          echo -e "GH_REPOSITORY> $GH_REPOSITORY"
+          echo "..."
+          echo -e "GH_EVENT_REPOSITORY> $GH_EVENT_REPOSITORY"
+          echo "..."
           echo -e "$GH_JSON_EVENT"
       - name: Echo. JSON event data (as var)
         run: |
-          echo -e "GITHUB_REPOSITORY: ${{ github.repository }}"
-          echo ".."
-          echo -e "GITHUB_EVENT_REPOSITORY: $${{ github.event.repository }}"
-          echo ".."
-          echo -e "$${{ github.event }}"
+          echo -e "GITHUB_REPOSITORY> ${{ github.repository }}"
+          echo "..."
+          echo -e "GITHUB_EVENT_REPOSITORY> ${{ github.event.repository }}"
+          echo "..."
+          echo -e "${{ github.event }}"
   
 #
 # use output variables should be the prefered way
