add workflow run defaults

--- a/.github/workflows/ci.create-react-app.yml
+++ b/.github/workflows/ci.create-react-app.yml
@@ -28,6 +28,11 @@ on:
   # manual dispatch
   workflow_dispatch:
 
+#defaults:
+#  run:
+#    shell: bash
+#    working-directory: my-created-react-app
+
 
 jobs:
 
