--- a/.github/labels.yml
+++ b/.github/labels.yml
@@ -64,3 +64,10 @@
   description: "Issues/PRs exempt to be staled"
   color: "0e8a16"
 
+#
+# pr-conflicts.yml
+#
+
+- name: "conflicts"
+  description: "Conflict(s) need to be resolved"
+  color: "DABA08"
